// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SportikLobby snapshot with gamerNumber 0 1`] = `
<DocumentFragment>
  <button
    class="arrow-2"
  />
  <button
    class="arrow-3"
  />
  <div
    class="image-Sportik"
  >
    <button
      class="button"
    >
      &lt;Спортик&gt;
    </button>
  </div>
</DocumentFragment>
`;

exports[`SportikLobby snapshot with gamerNumber 1 1`] = `
<DocumentFragment>
  <button
    class="arrow-2Friend1"
  />
  <button
    class="arrow-3Friend1"
  />
  <div
    class="image-Sportik1"
  >
    <button
      class="button"
    >
      &lt;Спортик&gt;
    </button>
  </div>
</DocumentFragment>
`;

exports[`SportikLobby snapshot with gamerNumber 2 1`] = `
<DocumentFragment>
  <button
    class="arrow-2Friend2"
  />
  <button
    class="arrow-3Friend2"
  />
  <div
    class="image-Sportik2"
  >
    <button
      class="button"
    >
      &lt;Спортик&gt;
    </button>
  </div>
</DocumentFragment>
`;
